# brutecraber

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  hashes.txt
.github/workflows/: rust.yml
src/: benchmark.rs  cracker.rs  detector.rs  gpu_backend.rs  main.rs
src/hashes/: argon2.rs  bcrypt.rs  md5.rs  mod.rs  ntlm.rs  pbkdf2.rs  scrypt.rs  sha1_hash.rs  sha256.rs  sha3_256.rs  sha3_512.rs  sha512.rs
src/kernels/: md5.cl  ntlm.cl  sha1.cl  sha256.cl  sha3_256.cl  sha3_512.cl  sha512.cl
tests/: md5_base64_hashes.txt  sha1_base64_hashes.txt  sha1_hashes.txt  wordlist.txt
tests/hashes/bcrypt/: hashes.txt
tests/hashes/md5/: base64.txt  hashes.txt  old_base64.txt  salted.txt
tests/hashes/pbkdf2/: hashes.txt
tests/hashes/sha1/: base64.txt  hashes.txt  salted.txt
tests/hashes/sha256/: base64.txt  hashes.txt  salted.txt
tests/hashes/sha3-512/: hashes.txt
tests/hashes/sha512/: base64.txt  hashes.txt  salted.txt
tests/wordlists/: wordlist.txt
