[package]
name = "brutecraber"
version = "0.7.1"
edition = "2021"
license = "GPL-3.0"
description = "A blazing-fast, multithreaded hash cracker built with Rust"
repository = "https://github.com/Erikgavs/brutecraber"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bcrypt = "0.19.0"
clap = { version = "4.5.49", features = ["derive"] }
colored = "3.1.1"
indicatif = "0.18.4"
md4 = "0.11.0"
md-5 = "0.10.6"
rayon = "1.11.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"
