[package]
name = "brutecraber"
version = "0.8.1"
edition = "2024"
license = "GPL-3.0"
description = "A blazing-fast, multithreaded hash cracker built with Rust"
repository = "https://github.com/Erikgavs/brutecraber"

[features]
default = []
gpu = ["opencl3"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bcrypt = "0.19.0"
clap = { version = "4.5.49", features = ["derive"] }
colored = "3.1.1"
indicatif = "0.18.4"
md4 = "0.11.0"
md-5 = { version = "0.10.6", features = ["asm"] }
rayon = "1.11.0"
sha1 = { version = "0.10.6", features = ["asm"] }
sha2 = { version = "0.10.9", features = ["asm"] }
sha3 = "0.10.8"
num_cpus = "1.17.0"
faster-hex = "0.10.0"
argon2 = "0.5.3"
opencl3 = { version = "0.10", optional = true }

[dev-dependencies]
argon2 = { version = "0.5.3", features = ["password-hash", "rand"] }
